fix z-index#4

--- a/style.css
+++ b/style.css
@@ -46,12 +46,16 @@ body,
 }
 .photo-view-list .next1-for {
   animation: hidden 0s forwards;
+  z-index: -1;
+  opacity: 0;
 }
 .photo-view-list .current-back {
   animation: show-back .5s ease-out forwards;
 }
 .photo-view-list .prev1-back {
   animation: hidden 0s forwards;
+  z-index: -1;
+  opacity: 0;
 }
 .photo-view-list .next1-back {
   animation: hide-back .5s ease-out forwards;
